# fastFileInFiles

./: .gitignore  CMakeLists.txt  appveyor.yml  codespace_build.sh  readme.md  toolchain-mingw.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI_build.yml
src/: FastFindInFiles.cpp  FastFindInFiles.rc  PluginDefinition.cpp  PluginDefinition.h  fff.cpp  fff.h  menuCmdID.h  resource.h
src/DockingFeature/: StaticDialog.cpp  resource.h
vs.proj/: FastFindInFiles.vcxproj
